[package]
name = "tuibale"
version = "0.1.0"
edition = "2021"
license = "MIT"

description = "A simple csv Viewer"
homepage = "https://github.com/okirshen/tuibale"
repository = "https://github.com/okirshen/tuibale"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prettytable-rs = "0.8.0"
